[package]
name = "foundry-module-rt"
version = "0.2.0"
authors = ["CodeChain Team <hi@codechain.io>"]
license = "GPL-3.0"
edition = "2018"

[dependencies]
remote-trait-object = "0.4.0"
foundry-process-sandbox = { git = "https://github.com/CodeChain-io/foundry-sandbox.git" }
parking_lot = "0.11.0"
serde = { version = "1.0", features = ["derive"] }
serde_cbor = "0.11.1"
linkme = "0.2.1"
crossbeam = "0.7"
threadpool = "1.8.1"

[dev-dependencies]
rand = { version = "0.7.3" }